[gd_scene load_steps=5 format=3 uid="uid://6gsi8bpg787c"]

[ext_resource type="PackedScene" path="res://story_box.tscn" id="1_185op"]
[ext_resource type="Script" path="res://story_box_choose_3.gd" id="2_s3mcc"]
[ext_resource type="Texture2D" uid="uid://dnat0xj3japj8" path="res://icon.svg" id="3_thpea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7n0ki"]
size = Vector2(368, 32)

[node name="StoryBox" instance=ExtResource("1_185op")]
script = ExtResource("2_s3mcc")

[node name="Options" type="Node2D" parent="Area2D" index="2"]
visible = false
position = Vector2(192, 0)

[node name="Option1" type="Area2D" parent="Area2D/Options" index="0"]
position = Vector2(0, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Options/Option1" index="0"]
shape = SubResource("RectangleShape2D_7n0ki")

[node name="TextureRect" type="TextureRect" parent="Area2D/Options/Option1" index="1"]
offset_left = -184.0
offset_top = -16.0
offset_right = 184.0
offset_bottom = 16.0
texture = ExtResource("3_thpea")
expand_mode = 1

[node name="Option2" type="Area2D" parent="Area2D/Options" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Options/Option2" index="0"]
shape = SubResource("RectangleShape2D_7n0ki")

[node name="TextureRect" type="TextureRect" parent="Area2D/Options/Option2" index="1"]
offset_left = -184.0
offset_top = -16.0
offset_right = 184.0
offset_bottom = 16.0
texture = ExtResource("3_thpea")
expand_mode = 1

[node name="Option3" type="Area2D" parent="Area2D/Options" index="2"]
position = Vector2(0, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Options/Option3" index="0"]
shape = SubResource("RectangleShape2D_7n0ki")

[node name="TextureRect" type="TextureRect" parent="Area2D/Options/Option3" index="1"]
offset_left = -184.0
offset_top = -16.0
offset_right = 184.0
offset_bottom = 16.0
texture = ExtResource("3_thpea")
expand_mode = 1

[connection signal="done" from="." to="." method="_on_done"]
[connection signal="input_event" from="Area2D/Options/Option1" to="." method="_on_option_1_input_event"]
[connection signal="input_event" from="Area2D/Options/Option2" to="." method="_on_option_2_input_event"]
[connection signal="input_event" from="Area2D/Options/Option3" to="." method="_on_option_3_input_event"]
